# cell_observatory_finetune

./: .gitignore  .gitmodules  Dockerfile  README.md  apptainerfile.def  manager.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: docker_action.yml  enforcer.yml  truffle_hog.yaml
cluster/: args_parser.sh  check_available_janelia_nodes.sh  ray_check_status.sh  ray_check_status_runai.sh  ray_local_cluster.sh  ray_lsf_cluster.sh  ray_lsf_cluster_multijob.sh  ray_runai_cluster.sh  ray_slurm_cluster.sh  ray_slurm_cluster_multijob.sh  ray_start_cluster.sh  ray_start_cluster_runai.sh  ray_start_worker.sh  ray_start_worker_runai.sh
clusters/: launch_experiments.py  manager.py  ray_check_status.sh  ray_slurm_cluster_job.sh  ray_slurm_workers.sh  ray_start_cluster.sh  ray_start_worker.sh
configs/: base_evaluation_channel_split_masked_predictor.yaml  config_channel_predict_masked_predictor_mae.yaml  config_channel_split_masked_predictor_mae.yaml  config_denoise_dnmodel_mae.yaml  config_maskdino_resnet.yaml  config_mrcnn_convnext_fpn.yaml  config_mrcnn_hiera_fpn.yaml  config_mrcnn_intern_image_fpn.yaml  config_mrcnn_resnet.yaml  config_mrcnn_resnet_fpn.yaml  config_mrcnn_vitDet.yaml  config_upsample_masked_predictor_mae.yaml  skittlez_evaluation_maskdino_resnet.yaml  skittlez_evaluation_mrcnn_hiera_fpn.yaml  skittlez_evaluation_mrcnn_intern_image_fpn.yaml  skittlez_evaluation_mrcnn_resnet.yaml  skittlez_evaluation_mrcnn_resnet_fpn.yaml  skittlez_evaluation_mrcnn_vitDet.yaml  tests.yaml
configs/checkpoint/: checkpoint.yaml  checkpoint_evaluation.yaml
configs/clusters/: abc_a100.yaml  abc_dgx.yaml  coreweave_h100.yaml  coreweave_h200.yaml  (+6 more)
csrc/: nms_3d.h  roi_align_3d.h  vision.cpp
data/: dataloaders.py  structures.py  utils.py
evaluation/: automated_benchmark_evaluator.py  base_evaluation.py  evaluate.py  evaluate.sh  evaluator.py  metrics.py  skittlez_evaluation.py  test.sh
scripts/: eval.sh  inference.sh  init.sh  login.sh  train.sh
tests/: conftest.py
train/: hooks.py  loops.py  run.py  train.py  train.sh  train_multinode.sh  utils.py
training/: helpers.py  losses.py
utils/: checkpoint.py  comm.py  logging.py  visualization.py
(+550 files in other folders)
