[build-system]
requires = ["setuptools>=78.1.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segmentation"
version = "0.1.0"
description = "4D & 5D Segmentation Models"
authors = [{name = "Hugo Hamilton", email = "hph@berkeley.edu" }, {name = "Thayer Alshaabi"}]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["segmentation"]